[package]
name = "ehviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
visdom = "0.5.9"
once_cell = "1.17.0"

[dev-dependencies]
rand = "0.8.5"
